--- a/src/bank_editor.ui
+++ b/src/bank_editor.ui
@@ -2812,7 +2812,7 @@
               </widget>
              </item>
              <item row="1" column="0" colspan="2">
-              <widget class="QLabel" name="currentFile">
+              <widget class="QLineEdit" name="currentFile">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
                  <horstretch>0</horstretch>
@@ -2821,6 +2821,12 @@
                </property>
                <property name="text">
                 <string>&lt;Untitled&gt;</string>
+               </property>
+               <property name="frame">
+                <bool>false</bool>
+               </property>
+               <property name="readOnly">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
