--- a/src/bank_editor.ui
+++ b/src/bank_editor.ui
@@ -3726,7 +3726,7 @@ Available from 0 to 127</string>
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Mame YM2612</string>
+    <string notr="true">Mame YM2612</string>
    </property>
   </action>
   <action name="actionEmulatorGens">
@@ -3752,7 +3752,7 @@ Available from 0 to 127</string>
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Genesis Plus GX</string>
+    <string notr="true">Genesis Plus GX</string>
    </property>
   </action>
   <action name="actionReMeasureOne">
@@ -3796,7 +3796,7 @@ Available from 0 to 127</string>
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Mame YM2608</string>
+    <string notr="true">Mame YM2608</string>
    </property>
   </action>
   <action name="actionEmulatorPMDWinOPNA">
@@ -3804,7 +3804,7 @@ Available from 0 to 127</string>
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>PMDWin YM2608</string>
+    <string notr="true">PMDWin YM2608</string>
    </property>
   </action>
   <action name="actionStandardGM">
