Fixed missing translation of operator edit widgets

--- a/src/audio_config.ui
+++ b/src/audio_config.ui
@@ -32,7 +32,7 @@
         <item>
          <widget class="QToolButton" name="btnChooseDevice">
           <property name="text">
-           <string>...</string>
+           <string notr="true">...</string>
           </property>
          </widget>
         </item>
