--- a/src/operator_editor.ui
+++ b/src/operator_editor.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>260</width>
-    <height>230</height>
+    <height>232</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string notr="true">Operator</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="leftMargin">
