--- a/src/operator_editor.ui
+++ b/src/operator_editor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>260</width>
-    <height>232</height>
+    <width>316</width>
+    <height>249</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,10 +36,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
@@ -58,10 +64,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
@@ -80,10 +92,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
@@ -122,10 +140,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
@@ -154,10 +178,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
@@ -240,6 +270,12 @@
    </item>
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="formAlignment">
+      <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+     </property>
+     <property name="rightMargin">
+      <number>8</number>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_28">
        <property name="toolTip">
@@ -258,10 +294,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
@@ -290,10 +332,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
@@ -385,10 +433,16 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>50</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>60</width>
-         <height>20</height>
+         <width>80</width>
+         <height>16777215</height>
         </size>
        </property>
        <property name="toolTip">
